fixed background stretch

--- a/swirl1/swirl1.css
+++ b/swirl1/swirl1.css
@@ -1,4 +1,4 @@
-body{background:url(swirl1.png) fixed;margin:20%;}
+body{background:url(swirl1.png) fixed round;margin:20%;}
 h1{background:#000;color:rgba(255,255,255,0.9);border-bottom:solid 1px rgba(0,0,0,0.4);margin:0;padding:20px;}
 #code{background:rgba(0,0,0,0.5);color:rgba(255,255,255,0.75);font-family:
 Consolas, "Andale Mono", "Lucida Console", "Lucida Sans Typewriter", Monaco, "Courier New", monospace;margin:0;padding:10px;font-size:14px;}
